feat: Add Zeabur deployment guide, increase food radius, localize UI text, and enhance game rendering with shadows, gradients, and animated effects for obstacles and players

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- Theme toggle button -->
-    <button id="themeToggle" class="theme-toggle" title="切換主題">🌓</button>
+    <button id="themeToggle" class="theme-toggle" title="Toggle Theme">🌓</button>
 
     <div id="game-container">
         <!-- Canvas for game rendering -->
@@ -43,9 +43,9 @@
 
         <!-- Player stats -->
         <div id="playerStats" class="hidden">
-            <div>質量: <span id="playerMass">0</span></div>
-            <div>排名: <span id="playerRank">-</span></div>
-            <div>主題: <span id="currentTheme">淺色</span></div>
+            <div>Mass: <span id="playerMass">0</span></div>
+            <div>Rank: <span id="playerRank">-</span></div>
+            <div>Theme: <span id="currentTheme">Light</span></div>
         </div>
 
         <!-- Connection status -->
