--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,7 +56,7 @@
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
 
     <!-- Game JavaScript -->
-    <script src="/static/game.js"></script>
+    <script src="/static/game.js?v=1"></script>
 </body>
 
 </html>
