feat: Add random player name generator with a dedicated button and styling.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,10 @@
             <div class="overlay-content">
                 <h1>🎮 Pygar</h1>
                 <p>Eat food and smaller players to grow!</p>
-                <input type="text" id="playerName" placeholder="Enter your name" maxlength="15" autocomplete="off">
+                <div class="input-group">
+                    <input type="text" id="playerName" placeholder="Enter your name" maxlength="15" autocomplete="off">
+                    <button id="randomNameBtn" title="Random Name">🎲</button>
+                </div>
                 <button id="playButton" class="btn-primary">Play</button>
             </div>
         </div>
